--- a/stylemain.css
+++ b/stylemain.css
@@ -14,7 +14,7 @@ body {
   padding: 40px;
   border-radius: 20px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-  text-align: center;
+  text-align: justify;
   max-width: 800px;
 }
 
