--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-  align-items: justify;
+  align-items: center;
   height: 100vh;
 }
 
